--- a/fireBaseChat/Podfile
+++ b/fireBaseChat/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+  platform :ios, '16.0'
 
 target 'fireBaseChat' do
   use_frameworks!
@@ -26,6 +26,15 @@ pod 'JGProgressHUD'
 pod 'RealmSwift'
 pod 'SDWebImage'
 
- 
-
+post_install do |installer|
+  installer.generated_projects.each do |project|
+        project.targets.each do |target|
+            target.build_configurations.each do |config|
+                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
+             end
+        end
+ end
+    installer.pods_project.targets.each do |target|
+  end
+end
 end
