--- a/fireBaseChat/fireBaseChat/Info.plist
+++ b/fireBaseChat/fireBaseChat/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Please allow access to send audio and video messages</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow access to take pictures</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow access to select media</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
